[tool.poetry]
name = "learn-pytorch"
version = "0.1.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = "^3.10"
ipython = "^8.2.0"
jupyter = "^1.0.0"
python-lsp-server = {extras = ["all"], version = "^1.4.1"}
numpy = "^1.22.3"
tensorboard = "^2.8.0"
gym = {extras = ["box2d"], version = "^0.23.1"}
